# DataSeriesExamples

./: COPYING  README  make-tar.sh
simple/: Makefile  ds-simple-read.cpp  ds-simple-write.cpp  merge-example.cpp  processing.cpp  running_multiple_modules.cpp  test-ds-simple-read-write.sh  test-writing_a_file.sh  writing_a_file.cpp
triangle-find/: CMakeLists.txt  check-few-edges.sh  edges-sort.pl  edges.conv.xml  few-edges.ds  few-edges.sort  performance  terence.c  terence2.c  triangle-find-ds.cpp  triangle_find.hpp
